--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,5 @@ npm-debug.log
 yarn-error.log
 
 # End of https://www.gitignore.io/api/vuejs,django,virtualenv,visualstudiocode
+vue.config.js
+api.js
